docs/tests/syntax/good/testfile-compare-1.cpp
int m() { return 1==2 && 3==4 || !(5>=6); }
