docs/tests/syntax/bad/testfile-lexing2-1.cpp
void m() { int i = 1/// comment starts at first /, not second
        1; }
